[gd_scene load_steps=5 format=3 uid="uid://rs67wkptrvjo"]

[ext_resource type="Script" uid="uid://da6k157kvcem0" path="res://Scenes/Games/Blackjack/blackjack.gd" id="1_yk8rt"]
[ext_resource type="PackedScene" uid="uid://b8tj7kn077d3v" path="res://Scenes/PlayingCards/card.tscn" id="2_3txm1"]
[ext_resource type="Texture2D" uid="uid://bhcil67sdkh3u" path="res://Assets/table.png" id="2_i0vn2"]
[ext_resource type="Theme" uid="uid://phgp7ky6igg7" path="res://Themes/buttons.tres" id="4_f7jlt"]

[node name="Blackjack" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk8rt")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.34902, 0.188235, 1)

[node name="Table" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_i0vn2")

[node name="GameArea" type="Node2D" parent="."]
position = Vector2(960, 512)

[node name="DealerArea" type="Node2D" parent="GameArea"]
position = Vector2(0, -315)

[node name="DealerLabel" type="Label" parent="GameArea/DealerArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -133.0
offset_right = 79.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Dealer Jonotan"
horizontal_alignment = 1

[node name="DealerCards" type="Node2D" parent="GameArea/DealerArea"]
position = Vector2(-96, 140)

[node name="Node2D" type="Node2D" parent="GameArea/DealerArea/DealerCards"]

[node name="Card" parent="GameArea/DealerArea/DealerCards/Node2D" instance=ExtResource("2_3txm1")]

[node name="DealerScoreLabel" type="Label" parent="GameArea/DealerArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -67.0
offset_right = 53.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="PlayerArea" type="Node2D" parent="GameArea"]
position = Vector2(0, 399)

[node name="PlayerLabel" type="Label" parent="GameArea/PlayerArea"]
offset_left = -73.0
offset_top = 77.0
offset_right = 78.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Player"
horizontal_alignment = 1

[node name="PlayerCards" type="Node2D" parent="GameArea/PlayerArea"]
position = Vector2(-93, -143)

[node name="Node2D" type="Node2D" parent="GameArea/PlayerArea/PlayerCards"]

[node name="Card" parent="GameArea/PlayerArea/PlayerCards/Node2D" instance=ExtResource("2_3txm1")]
position = Vector2(39, 12)

[node name="PlayerScoreLabel" type="Label" parent="GameArea/PlayerArea"]
offset_left = -50.0
offset_top = 57.0
offset_right = 53.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Blackjack"

[node name="ResultLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = 30.5
offset_right = 189.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Place your bet and deal to start"
horizontal_alignment = 1

[node name="ReturnButtonsContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -19.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/separation = 35

[node name="BackButton" type="Button" parent="UI/ReturnButtonsContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="ExitButton" type="Button" parent="UI/ReturnButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 35
text = "X"

[node name="ButtonsPanelContainer" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -375.0
offset_right = -73.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.03723, 0.93299)

[node name="ButtonsContainer" type="VBoxContainer" parent="UI/ButtonsPanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ButtonsPanelContainer/ButtonsContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Place Your Bets!"
horizontal_alignment = 1

[node name="GameButtonsContainer" type="HBoxContainer" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="HitButton" type="Button" parent="UI/ButtonsPanelContainer/ButtonsContainer/GameButtonsContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 25
text = "Hit"

[node name="StandButton" type="Button" parent="UI/ButtonsPanelContainer/ButtonsContainer/GameButtonsContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 25
text = "Stand"

[node name="HSeparator" type="HSeparator" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2

[node name="BetLabel" type="Label" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Bet:"
horizontal_alignment = 1

[node name="BetAmount" type="Label" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="BetButtonsContainer" type="HBoxContainer" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="BetDecreaseButton" type="Button" parent="UI/ButtonsPanelContainer/ButtonsContainer/BetButtonsContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 25
text = "-100"

[node name="BetIncreaseButton" type="Button" parent="UI/ButtonsPanelContainer/ButtonsContainer/BetButtonsContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 25
text = "+ 100
"

[node name="ChipsLabel" type="Label" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Chips:"
horizontal_alignment = 1

[node name="ChipsAmount" type="Label" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2

[node name="DealButtonContainer" type="PanelContainer" parent="UI/ButtonsPanelContainer/ButtonsContainer"]
layout_mode = 2

[node name="DealButton" type="Button" parent="UI/ButtonsPanelContainer/ButtonsContainer/DealButtonContainer"]
layout_mode = 2
theme = ExtResource("4_f7jlt")
theme_override_font_sizes/font_size = 35
text = "DEAL!"

[node name="AudioParent" type="Node" parent="."]

[node name="CardSounds" type="AudioStreamPlayer" parent="AudioParent"]

[node name="WinSound" type="AudioStreamPlayer" parent="AudioParent"]

[node name="LoseSound" type="AudioStreamPlayer" parent="AudioParent"]
